fixed page alignment issue on desktop

--- a/index.css
+++ b/index.css
@@ -43,7 +43,6 @@ body {
     background-color: white;
     position: absolute;
     width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
     transform-origin: left;
@@ -54,11 +53,12 @@ body {
     z-index: 1;
     -webkit-backface-visibility: hidden; /* -webkit needed for <5% of browser users as of 06/22, backface-visibility is in all new versions so won't matter when people update*/
     border-left: 1px solid #683D2C;
+    height: 100%;
 }
 
 .back {
     z-index: 0;
-    height: 100%; /*To fix a misalignment issue - do not delete*/
+    height: 99.9%; /*To fix a misalignment issue - do not delete*/
 }
 
 .front-content,
@@ -179,12 +179,14 @@ button:focus {
 
 /*mobile styling*/
 @media only screen and (max-width: 600px) {
+    body {
+        padding-top: 20px;
+        justify-content: start;
+        align-items: center;
+    }
     .book {
         width: 90vw;
         height: 65vh;
-    }
-    .front {
-        height: 100%; /*To fix a misalignment issue - do not delete*/
     }
     h1 {
         font-size: 22px;
@@ -196,9 +198,6 @@ button:focus {
         justify-content: center;
         flex-wrap: wrap;
         padding: 0px 10px 0px 10px;
-    }
-    .button-box i {
-        font-size: 30px;
     }
     * {
         -webkit-backface-visibility: hidden;
